--- a/privacy.html
+++ b/privacy.html
@@ -26,6 +26,6 @@
   <p>Selectr does not store or transmit any user data. All operations occur directly with Spotify’s API.</p>
 
   <h2>Contact</h2>
-  <p>If you have questions or concerns, contact: <a href="mailto:grant_alastair@yahoo.co.uk">grant_alastair@yahoo.co.uk</a></p>
+  <p>If you have questions or concerns, contact: <a href="mailto:alastairegrant@pm.me">alastairegrant@pm.me</a></p>
 </body>
 </html>
